chore(Jenkins): Java out-of-memory